# pirate_filter

./: README.md  com.dinamita.filters.json  meson.build
Latex_PDF/: Tarea02.fdb_latexmk  Tarea02.fls  Tarea02.tex
data/: com.dinamita.filters.appdata.xml.in  com.dinamita.filters.desktop.in  com.dinamita.filters.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: app.vala  main.vala  meson.build  namespace.vala  pirate_filter.gresource.xml  window.vala
src/filters/: blue_filter.vala  filter.vala  green_filter.vala  namespace.vala  red_filter.vala  window_filter.vala
